--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 		</div>
 
 		<!-- scripts -->
-		<script src="scripts/game.js"></script>
+		<script src="scripts/game/game.utility.js"></script>
+		<script src="scripts/game/game.core.js"></script>
 		<script src="scripts/app.js"></script>
 	</body>
 </html>
