--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
 			</div>
 			<!-- views -->
 			<script type="text/ng-template" id="view/frontpage">
-				<a href="#/game">Play!</a>
+				<p><a href="#/game">Play!</a></p>
+				<p><a href="#/options">Options</a></p>
+			</script>
+			<script type="text/ng-template" id="view/options">
+				<p>Options</p>
+				<p>*options go here*</p>
+				<p><a href="#/">Back</a></p>
 			</script>
 			<script type="text/ng-template" id="view/gamepage">
 				<canvas id="gameCanvas" width="640" height="480"></canvas>
