Menu styling, fix move animation.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			</div>
 			<!-- views -->
 			<script type="text/ng-template" id="view/frontpage">
-				<p><a href="#/game">Play!</a></p>
+				<p><a href="#/game">Start</a></p>
 				<p><a href="#/options">Options</a></p>
 			</script>
 			<script type="text/ng-template" id="view/options">
