--- a/index.html
+++ b/index.html
@@ -25,13 +25,15 @@
 				<p><a href="#/">Back</a></p>
 			</script>
 			<script type="text/ng-template" id="view/gamepage">
-				<canvas id="gameCanvas" width="640" height="480"></canvas>
+				<!-- <canvas id="gameCanvas" width="640" height="480"></canvas> -->
+				<canvas id="gameCanvas" width="360" height="240"></canvas>
 				<p><a href="#/">Back</a></p>
 			</script>
 		</div>
 
 		<!-- scripts -->
 		<script src="scripts/game/game.utility.js"></script>
+		<script src="scripts/game/game.classes.js"></script>
 		<script src="scripts/game/game.core.js"></script>
 		<script src="scripts/app.js"></script>
 	</body>
