Weapons and singular "outfile"
The concept of "weapons" have been inserted between player objects and
projectile objects to better handle the projectile meta data.

A bug where dead sprites wouldn't disappear because they didn't trigger
a "draw" fixed by forcing a "draw" every 15 simulation.

Two weapons added to tanks as a "proof-of-concept".

Classes has been dissolved into independent files to ease seperation of
concerns.

--- a/index.html
+++ b/index.html
@@ -32,9 +32,12 @@
 		</div>
 
 		<!-- scripts -->
+		<!-- 
 		<script src="scripts/game/game.utility.js"></script>
 		<script src="scripts/game/game.classes.js"></script>
 		<script src="scripts/game/game.core.js"></script>
 		<script src="scripts/app.js"></script>
+		-->
+		<script src="main.js"></script>
 	</body>
 </html>
