--- a/index.html
+++ b/index.html
@@ -32,12 +32,6 @@
 		</div>
 
 		<!-- scripts -->
-		<!-- 
-		<script src="scripts/game/game.utility.js"></script>
-		<script src="scripts/game/game.classes.js"></script>
-		<script src="scripts/game/game.core.js"></script>
-		<script src="scripts/app.js"></script>
-		-->
-		<script src="main.js"></script>
+		<script src="scripts/main.js"></script>
 	</body>
 </html>
