Stylized <ol> and <ul>

--- a/index.html
+++ b/index.html
@@ -28,8 +28,15 @@
 				</div>
 				<div class="bordered">
 					<p>Password</p>
-					<p>Text</p>
-					<p>Text</p>
+					<ul>
+						<li>This is just to test out some styling components</li>
+						<li>Don't take anything you read here too seriously!</li>
+					</ul>
+					<p>Instructions</p>
+					<ol>
+						<li>Enter password</li>
+						<li>Press OK</li>
+					</ol>
 					<div class="input-option">
 						<input type="text" name="password">
 						<button>OK</button>
