--- a/index.html
+++ b/index.html
@@ -31,11 +31,35 @@
 					<ul>
 						<li>This is just to test out some styling components</li>
 						<li>Don't take anything you read here too seriously!</li>
+						<ul>
+							<li>This is just to test out some styling components</li>
+							<li>Don't take anything you read here too seriously!</li>
+							<ul>
+								<li>This is just to test out some styling components</li>
+								<li>Don't take anything you read here too seriously!</li>
+							</ul>
+						</ul>
 					</ul>
 					<p>Type something:<p>
 					<input placeholder="Something" type="text" name="nonsense">
 					<p>Password</p>
 					<ol>
+						<li>Make a password
+							<ol>
+								<li>Enter a password</li>
+								<li>Press "OK"</li>
+							</ol>
+						</li>
+						<li>Verify a password
+							<ol>
+								<li>Enter a password</li>
+								<li>Press "OK"</li>
+								<ol>
+									<li>Enter a password</li>
+									<li>Press "OK"</li>
+								</ol>
+							</ol>
+						</li>
 						<li>Enter a password</li>
 						<li>Press "OK"</li>
 					</ol>
