--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset='utf-8'>
+		<meta charset="utf-8">
 		<title>tank-game</title>
 		<!-- styles -->
 		<link rel="stylesheet" type="text/css" href="style/styles.css"/>
