--- a/index.html
+++ b/index.html
@@ -32,16 +32,15 @@
 						<li>This is just to test out some styling components</li>
 						<li>Don't take anything you read here too seriously!</li>
 						<ul>
-							<li>This is just to test out some styling components</li>
-							<li>Don't take anything you read here too seriously!</li>
-							<ul>
-								<li>This is just to test out some styling components</li>
-								<li>Don't take anything you read here too seriously!</li>
-							</ul>
+							<li>Especially this bit</li>
 						</ul>
 					</ul>
 					<p>Type something:<p>
 					<input placeholder="Something" type="text" name="nonsense">
+					<p>Type something more:</p>
+					<textarea placeholder="Something more"></textarea>
+				</div>
+				<div class="bordered">
 					<p>Password</p>
 					<ol>
 						<li>Make a password
@@ -54,14 +53,8 @@
 							<ol>
 								<li>Enter a password</li>
 								<li>Press "OK"</li>
-								<ol>
-									<li>Enter a password</li>
-									<li>Press "OK"</li>
-								</ol>
 							</ol>
 						</li>
-						<li>Enter a password</li>
-						<li>Press "OK"</li>
 					</ol>
 					<input type="password" name="password">
 					<button>OK</button>
