--- a/index.html
+++ b/index.html
@@ -3,9 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>tank-game</title>
-		<!-- styles -->
-		<link rel="stylesheet" type="text/css" href="style/styles.css"/>
-		<!-- libs -->
+		<link rel="stylesheet" type="text/css" href="build/tank-game.min.css"/>
 		<script src="build/tank-game.min.js"></script>
 	</head>
 	<body>
