Building fixes and normalization

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>tank-game</title>
-		<link rel="stylesheet" type="text/css" href="build/tank-game.min.css"/>
-		<script src="build/tank-game.min.js"></script>
+		<link rel="stylesheet" type="text/css" href="build/style.min.css"/>
+		<script src="build/script.min.js"></script>
 	</head>
 	<body>
 		<div id="app-container" ng-app="tankApp">
